added background image element

--- a/index.html
+++ b/index.html
@@ -9,5 +9,9 @@
   <h1>Border Radius</h1>
   <div class="border-radius">
   </div>
+  <h1>Background Image</h1>
+  <div>
+    <img src="images/doberman.jpeg" class="background-img">
+  </div>
 </body>
 </html>
