added word wrap element

--- a/index.html
+++ b/index.html
@@ -13,5 +13,9 @@
   <div>
     <img src="images/doberman.jpeg" class="background-img">
   </div>
+  <h1>Word Wrap</h1>
+  <div>
+    <p class="wrap">Synth cray mlkshk sriracha, unicorn gastropub vinyl. Mumblecore schlitz pickled enamel pin. VHS echo park cray prism 3 wolf moon affogato knausgaard poutine chambray artisan farm-to-table banh mi cornhole bicycle rights kickstarter.</p>
+  </div>
 </body>
 </html>
