added transition and gradient

--- a/index.html
+++ b/index.html
@@ -17,5 +17,11 @@
   <div>
     <p class="wrap">Synth cray mlkshk sriracha, unicorn gastropub vinyl. Mumblecore schlitz pickled enamel pin. VHS echo park cray prism 3 wolf moon affogato knausgaard poutine chambray artisan farm-to-table banh mi cornhole bicycle rights kickstarter.</p>
   </div>
+  <h1>Gradients</h1>
+  <div class="gradient">
+  </div>
+  <h1>Transition</h1>
+  <div class="transition">
+  </div>
 </body>
 </html>
