--- a/index.html
+++ b/index.html
@@ -23,5 +23,11 @@
   <h1>Transition</h1>
   <div class="transition">
   </div>
+  <h1>Opacity</h1>
+  <div>
+    <img src="images/obi.jpg" class="img-o">
+    <img src="images/obi.jpg" class="img-o-half">
+    <img src="images/obi.jpg" class="img-o-quart">
+  </div>
 </body>
 </html>
