added multiple elements

--- a/index.html
+++ b/index.html
@@ -29,5 +29,46 @@
     <img src="images/obi.jpg" class="img-o-half">
     <img src="images/obi.jpg" class="img-o-quart">
   </div>
+  <h1>Overflow-y</h1>
+  <div class="overflow">
+    <p>Synth cray mlkshk sriracha, unicorn gastropub vinyl. Mumblecore schlitz pickled enamel pin. VHS echo park cray prism 3 wolf moon affogato knausgaard poutine chambray artisan farm-to-table banh mi cornhole bicycle rights kickstarter. Brooklyn iceland normcore tousled tbh edison bulb vinyl cliche. Echo park retro poke typewriter.</p>
+  </div>
+  <h1>Blend Mode</h1>
+  <div class="blend">
+  </div>
+  <h1></h1>
+  <div class="ani">
+  </div>
+  <h1>Text Align</h1>
+  <div>
+    <p class="align1">this aligns left</p>
+    <p class="align2">this aligns right</p>
+  </div>
+  <h1>Columns</h1>
+  <div class="column">
+  <p>jkfadsbjdkjvdsjbvjdskjbvdsvbasjdbvldsbvldbvldbvalsdbvjalsdbvldasbvjdlasbvlsadbvlsadbvjlasdbvljsadvbsldvjblsadjvblsajldv</p>
+  <p>dskjhosdabvjsdalvbjasdlvlsdajnvljsdabvjldsbvljdsbvjs</p>
+  <p>dkjvbsjdjdjjjjdjdjdjjdjdjjdjdjdjdjdjjdjdjdjdjdjjdjdjdjdjdjjdjdjdjdjdjjdjdjdjd</p>
+</div>
+<h1>Box Shadow</h1>
+<div class="box">
+</div>
+<h1>Resize</h1>
+<div class="resizeable">
+</div>
+<h1>Text Stroke</h1>
+<div>
+  <p class="stroke">dkfjsadsjjskgjkdshvjfdvjkfsbvjkdfbvksdfvifewbviefbvkfbvf eivbdkfbvkdsabvafidbvifdbvfi</p>
+</div>
+<h1>List Style</h1>
+<ul>
+  <li>
+    CSET
+  </li>
+  <li>
+    Math
+    </li>
+  </ul>
+    </math>
 </body>
 </html>
